@ fix: 修复多个 Bug 并重构 SimpleRedisLock
Bug 修复:
- BlogComments.status 字段类型 Boolean → Integer（2.4）
- UserInfo.level 字段类型 Boolean → Integer（2.5）
- CacheClient + ShopServiceImpl 不安全释放锁：移除私有 tryLock/unLock，
  统一注入 SimpleRedisLock 使用 Lua 脚本原子校验后释放（2.2）
- Controller Javadoc: Redis Stream → RabbitMQ（新增-3）

重构:
- SimpleRedisLock 重构为无状态 @Component Bean：name 从构造参数
  移至 tryLock/unlock 方法参数，支持不同锁名动态传入
- ILock 接口同步更新方法签名
- RedisConstants.LOCK_SHOP_KEY 去重前缀（SimpleRedisLock 统一添加 "lock:"）

清理:
- ShopServiceImpl: 删除约 80 行注释掉的死代码
- VoucherOrderServiceImpl: 移除未使用的 Redis Stream import
- unlock.lua: 清理 EmmyLua 自动生成注释头
- .gitignore: 添加 node_modules/ .codegraph/
- CacheClient: Javadoc 格式化规范化
- CLAUDE.md: 基于 CodeGraph 分析全面重写
@